Fix content shift
ERM26023

[4.x]

--- a/resources/stylesheets/fixes/desktop.less
+++ b/resources/stylesheets/fixes/desktop.less
@@ -53,3 +53,9 @@ body.mediawiki .oo-ui-windowManager-modal > .oo-ui-dialog,
 .mw-echo-ui-overlay {
 	z-index: inherit !important;
 }
+
+/* fix shift of content if opening a dialog or opening VE */
+body.mediawiki.oo-ui-windowManager-modal-active {
+	margin-right: 0 !important;
+	overflow: auto;
+}
